增加了通用数据库方案，完成了地标模块

--- a/module/module-warp/src/main/resources/module/warp/lang/zh_CN.yml
+++ b/module/module-warp/src/main/resources/module/warp/lang/zh_CN.yml
@@ -1,2 +1,8 @@
-module-warp-create-success: "§8[§4 TPW §8]§7 地标创建成功 {0}"
-module-warp-create-exists: "§8[§4 TPW §8]§7 地标 {0} 已存在"
+module-warp-create-success: "§8\\[§a TPW §8\\]§7 地标创建成功&f {0}"
+module-warp-create-exists: "§8\\[§4 TPW §8\\]§7 地标 &f{0}&7 已存在"
+module-warp-delete-not-exists: "§8\\[§4 TPW §8\\]§7 地标 &f{0}&7 不存在"
+module-warp-delete-success: "§8\\[§a TPW §8\\]§7 地标 &f{0}&7 删除成功"
+module-warp-list: "§8\\[§a TPW §8\\]§7 地标列表: {0}"
+module-warp-warp-not-exists: "§8\\[§4 TPW §8\\]§7 地标 &f{0}&7 不存在"
+module-warp-warp-success: "§8\\[§a TPW §8\\]§7 传送成功 &f{0}"
+module-warp-reload: "§8\\[§a TPW §8\\]§7 重载成功"
